# docker-ckip-transformer

./: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yaml  drivers.py  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: docker.yaml
config/: uwsgi.ini
server/: app.py  drivers.py
