[tool.poetry]
name = "docker-ckip-transformers"
version = "1.0.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.2.2"
ckip-transformers = "0.3.2"
ipython = "8.7.0"
uWSGI = "2.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
